# IndertCT

./: LICENSE  README.md  pyproject.toml  setup.py
IndertCT.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
IndertCT_python/: __init__.py  api_conn.py
