[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "IndertCT_python"
authors = [{name = "Dinis Moreira", email = "jusupaq@gmail.com"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/IndertCT/IndertCT/settings/secrets/actions"
Documentation = "https://github.com/IndertCT/IndertCT/settings/secrets/actions"

[project.optional-dependencies]
test = [
    "requests"
]